# DataEntry

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
DataEntry_Test/: CMakeLists.txt
TinyXML2/: CMakeLists.txt
dataTest/: test.xml
src/xml/: dataentry.cpp  dataentry.h
srcTest/: main.cpp
